# KaguEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CMake/: CompileShaders.cmake  SetModuleUUID.cmake
KaguEngine/: CMakeLists.txt
KaguEngine/assets/shaders/: compile.bat  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  with_textures.frag  with_textures.vert  without_textures.frag  without_textures.vert
KaguEngine/shaders/: simple_shader.frag
KaguEngine/src/: App.cpp  App.cppm  App.hpp  App.ixx  AppCpp.cppm  AppHpp.cppm  Buffer.cpp  Buffer.cppm  Buffer.hpp  Buffer.ixx  BufferCpp.cppm  BufferHpp.cppm  Camera.cpp  Camera.cppm  Camera.hpp  Camera.ixx  CameraCpp.cppm  CameraHpp.cppm  Core.cpp  Core.hpp  Descriptor.cpp  Descriptor.cppm  Descriptor.hpp  Descriptor.ixx  DescriptorCpp.cppm  DescriptorHpp.cppm  Device.cpp  Device.cppm  Device.hpp  Device.ixx  DeviceCpp.cppm  DeviceHpp.cppm  Entity.cpp  Entity.cppm  Entity.hpp  Entity.ixx  FrameInfo.cppm  FrameInfo.hpp  FrameInfo.ixx  ImGuiContext.cpp  (+47 more)
KaguEngine/src/EngineCleanup/: VulkanCleanup.cpp
KaguEngine/src/EngineInit/: VulkanDebugger.cpp  VulkanDeviceChoice.cpp  VulkanInit.cpp  VulkanMSAAInit.cpp  VulkanQueues.cpp  VulkanSwapChain.cpp  VulkanValidationLayers.cpp  VulkanVertexBuffer.cpp
KaguEngine/src/EngineLoop/: VulkanFrameRendering.cpp
KaguEngine/src/EngineShaders/: VulkanShaders.cpp
KaguEngine/src/EngineTextures/: VulkanTextureGestion.cpp
KaguEngine/src/include/: config.hpp  font_awesome.hpp  imgui_includes.hpp
KaguEngine/src/systems/: PointLightSystem.cpp  PointLightSystem.cppm  PointLightSystem.hpp  PointLightSystem.ixx  PointLightSystemCpp.cppm  PointLightSystemHpp.cppm  RenderSystem.cpp  RenderSystem.cppm  RenderSystem.ixx  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  SimpleRenderSystemCpp.cppm  SimpleRenderSystemHpp.cppm
Vulkan3DEngine/: CMakeLists.txt
Vulkan3DEngine/shaders/: shader.vert  vert.spv
Vulkan3DEngine/src/: Vulkan3DEngine.cpp  Vulkan3DEngine.hpp  main.cpp
Vulkan3DEngine/src/EngineCleanup/: VulkanCleanup.cpp
Vulkan3DEngine/src/EngineInit/: VulkanDebugger.cpp  VulkanDeviceChoice.cpp  VulkanInit.cpp  VulkanQueues.cpp  VulkanSwapChain.cpp  VulkanValidationLayers.cpp  VulkanVertexBuffer.cpp
Vulkan3DEngine/src/EngineLoop/: VulkanFrameRendering.cpp
Vulkan3DEngine/src/EngineShaders/: VulkanShaders.cpp
