cmake_minimum_required(VERSION 3.30 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_EXPERIMENTAL_CXX_MODULE_STD ON)
if(${CMAKE_VERSION} VERSION_LESS_EQUAL 3.32)
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "0e5b6991-d74f-4b3d-a41c-cf096e0b2508")
else()
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "a9e1cf81-9932-4810-974b-6eccaf14e457")
endif()
set(CMAKE_CXX_MODULE_STD ON)

project(KaguEngine VERSION 0.0.1 LANGUAGES CXX)

add_subdirectory(KaguEngine)